package org.example.fashionstoresystem.entity.enums;

public enum DiscountType {
    PERCENTAGE,
    FIXED_AMOUNT
}
