package org.example.fashionstoresystem.entity.enums;

public enum OrderStatus {
    PENDING_PAYMENT,
    PAID,
    PROCESSING,
    SHIPPING,
    DELIVERED,
    COMPLETED,
    CANCELLED,
    PAYMENT_FAILED,
    PAYMENT_EXPIRED
}
