package org.example.fashionstoresystem.entity.enums;

public enum OrderType {
    ONLINE,
    OFFLINE
}
