package org.example.fashionstoresystem.entity.enums;

public enum PaymentMethod {
    COD,
    VNPAY,
    MOMO,
    BANK_TRANSFER
}
