package org.example.fashionstoresystem.entity.enums;

public enum RefundStatus {
    NONE,
    PENDING,
    COMPLETED,
    FAILED
}
