package org.example.fashionstoresystem.entity.enums;

public enum ReturnStatus {
    PENDING,
    APPROVED,
    REJECTED,
    COMPLETED
}
