package org.example.fashionstoresystem.entity.enums;

public enum Role {
    ADMIN,
    CUSTOMER
}
