package org.example.fashionstoresystem.entity.enums;

public enum TokenType {
    BEARER
}
