package org.example.fashionstoresystem.entity.enums;

public enum UserStatus {
    PENDING, // Chờ kích hoạt Email
    ACTIVE, // Đã kích hoạt
    BLOCKED // Admin có thể khóa tài khoản
}